[project]
name = "chat"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Syed Affan Ali", email = "160457228+MrAfoo@users.noreply.github.com" }
]
requires-python = ">=3.12"
dependencies = [
    "chainlit>=2.6.3",
    "dotenv>=0.9.9",
    "openai-agents>=0.2.4",
]

[project.scripts]
chat = "chat:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
